--- a/Aplicacion de Escritorio/ITPLibrary-main/nbproject/private/private.properties
+++ b/Aplicacion de Escritorio/ITPLibrary-main/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\marti\\Downloads\\mysql-connector-java-5.1.13-bin.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar-1=C:\\Users\\marti\\Downloads\\mysql-connector-java-5.1.13-bin.jar
-user.properties.file=C:\\Users\\marti\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\milag\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
